--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <p><span id="fps"></span> FPS</p>
     <canvas id="game"></canvas>
     <script type="module" src="src/main.js"></script>
 </body>
